--- a/backend/frontend/src/components/footer/Footer.css
+++ b/backend/frontend/src/components/footer/Footer.css
@@ -3,7 +3,8 @@
     color: white;
 }
 .footer__container {
-    padding: 75px 0;
+    padding-top: 75px;
+    padding-bottom: 75px;
     display: flex;
     justify-content: space-between;
 }
@@ -58,6 +59,10 @@
 }
 
 @media (max-width: 1100px) {
+    .footer__container{
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
     .top_footer{
         max-width: 350px;
     }
@@ -77,12 +82,28 @@
 }
 
 @media (max-width: 768px) {
+    .left_footer{
+        width: 80%;
+    }
+    .right_footer{
+        width: 20%;
+    }
     .top_footer{
         max-width: 300px;
     }
 }
 
 @media (max-width: 650px) {
+    .left_footer{
+        width: 83.3333333%;
+    }
+    .right_footer{
+        width: 16.6666667%;
+    }
+    .footer__container{
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
     .phone_text, .geo_text, .bottom_footer {
         font-size: 8px;
     }
@@ -106,6 +127,16 @@
 }
 
 @media (max-width: 400px){
+    .left_footer{
+        width: 75%;
+    }
+    .right_footer{
+        width: 25%;
+    }
+    .footer__container{
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
     .phone_text, .geo_text, .bottom_footer {
         font-size: 6px;
     }
