--- a/backend/frontend/src/components/header/Header.css
+++ b/backend/frontend/src/components/header/Header.css
@@ -18,6 +18,9 @@ header {
     font-size: 24px;
     line-height: 116.64%;
 }
+.nav__container{
+    padding: 0;
+}
 
 @media (max-width: 1200px){
     .nav-link {
@@ -28,9 +31,6 @@ header {
 @media (max-width: 992px) {
     .navbar-collapse{
         margin-top: 8px;
-    }
-    .logo-img {
-        display: none!important;
     }
     .navbar {
         width: 100%;
