--- a/backend/frontend/src/components/header/Header.css
+++ b/backend/frontend/src/components/header/Header.css
@@ -21,6 +21,9 @@ header {
 .nav__container{
     padding: 0;
 }
+.logo-img{
+    align-self: flex-start;
+}
 
 @media (max-width: 1200px){
     .nav-link {
@@ -29,6 +32,9 @@ header {
 }
 
 @media (max-width: 992px) {
+    .logo-img{
+        display: none!important;
+    }
     .navbar-collapse{
         margin-top: 8px;
     }
