--- a/frontend/src/components/advantage/Advantage.css
+++ b/frontend/src/components/advantage/Advantage.css
@@ -92,11 +92,33 @@
 } */
 
 @media (max-width: 767px){
+
     .advantage__block{
-        padding: 10px 0;
+        padding: 30px 0;
     }
     .advantage__item{
-        max-width: 160px;
+        max-width: 250px;
+        margin: 30px 0;
+    }
+    .advantage__item-logo{
+        width: 40px;
+        height: 40px;
+        margin-right: 20px;
+    }
+    .advantage__content-title{
+        font-size: 20px;
+        line-height: 14px;
+        margin-bottom: 4px;
+    }
+    .advantage__content-text{
+        font-size: 12px;
+        line-height: 14px;
+    }
+}
+
+@media (max-width: 576px){
+    .advantage__item{
+        max-width: 200px;
         margin: 20px 0;
     }
     .advantage__item-logo{
@@ -105,12 +127,12 @@
         margin-right: 16px;
     }
     .advantage__content-title{
-        font-size: 10px;
+        font-size: 16px;
         line-height: 14px;
         margin-bottom: 4px;
     }
     .advantage__content-text{
-        font-size: 8px;
+        font-size: 10px;
         line-height: 14px;
     }
 }
@@ -125,12 +147,12 @@
         height: 30px;
     }
     .advantage__content-title{
-        font-size: 8px;
+        font-size: 12px;
         line-height: 10px;
         margin-bottom: 4px;
     }
     .advantage__content-text{
-        font-size: 6px;
+        font-size: 8px;
         line-height: 10px;
     }
 }
