--- a/frontend/src/components/tasks/Tasks.css
+++ b/frontend/src/components/tasks/Tasks.css
@@ -188,6 +188,12 @@
 }
 
 @media (max-width: 1024px){
+    .tasks_text_text {
+        font-size: 16px;
+    }
+    .tasks_text_title {
+        font-size: 37px;
+    }
     .tasks__text {
         font-weight: 700;
         line-height: 108%;
@@ -232,13 +238,16 @@
         max-height: 550px;
     }
     .tasks__title {
-        font-size: 12px;
+        font-size: 14px;
         margin-bottom: 5px;
     }
     
 }
 
 @media (max-width: 767px){
+    .tasks__title {
+        font-size: 13px;
+    }
     .tasks__text {
         font-size: 35px;
     }
@@ -247,11 +256,11 @@
         margin-bottom: 35px;  
     }
     .tasks_text_title {
-        font-size: 29px;
+        font-size: 31px;
     }
-    .tasks_text_text {
-        font-size: 15px;
-    }
+    /* .tasks_text_text {
+        font-size: 14px;
+    } */
     .tasks_content_icon{
         height: 50%;
         width: 100px;
@@ -264,6 +273,12 @@
 }
 
 @media (max-width: 576px){
+    .tasks_text_text {
+        font-size: 14px;
+    }
+    .tasks__title {
+        font-size: 12px;
+    }
     .tasks__block {
         padding: 41px 0 0;
     }
@@ -278,7 +293,7 @@
         margin-bottom: 35px;  
     }
     .tasks_text_title {
-        font-size: 22px;
+        font-size: 28px;
     }
     .tasks_text_text {
         font-size: 12px;
@@ -293,17 +308,20 @@
     
 }
 @media (max-width: 493px){
+    .tasks__title {
+        font-size: 11.5px;
+    }
     .tasks__block {
         padding: 41px 0 0;
     }
     .tasks__text {
-        font-size: 25px;
+        font-size: 26px;
     }
     .tasks_text_block {
         margin-bottom: 35px;  
     }
     .tasks_text_title {
-        font-size: 22px;
+        font-size: 25px;
     }
     .tasks_text_text {
         font-size: 12px;
@@ -317,18 +335,21 @@
     }
 }
 @media (max-width: 405px){
+    .tasks_text_text {
+        font-size: 13px;
+    }
     .tasks__title {
-        font-size: 10px;
+        font-size: 11px;
     }
     .tasks_text_block {
         margin-bottom: 35px;  
     }
     .tasks_text_title {
-        font-size: 16px;
+        font-size: 22px;
     }
-    .tasks_text_text {
+    /* .tasks_text_text {
         font-size: 12px;
-    }
+    } */
     .tasks_content_icon{
         width: 75px;
     }
@@ -339,6 +360,9 @@
     
 }
 @media (max-width: 367px){
+    .tasks_text_title {
+        font-size: 19px;
+    }
     .tasks__container.container{
         height: 100%;
     }
@@ -346,7 +370,7 @@
         font-size: 10px;
     }
     .tasks__text {
-        font-size: 25px;
+        font-size: 21px;
         width: auto;
     }
     .tasks_text_block {
@@ -360,6 +384,9 @@
     }
 }
 @media (max-width: 285px){
+    .tasks_text_title {
+    font-size: 16px;
+    }
     .tasks__container.container{
         height: 300px;
     }
