--- a/frontend/src/components/leaders/Leaders.css
+++ b/frontend/src/components/leaders/Leaders.css
@@ -125,11 +125,11 @@
     .leaders_title{
         margin-bottom: 5px;
     }
-    leaders_title_leader {
+    /* .leaders_title_leader {
         width: 50%;
         margin-bottom: 5px;
         font-size: 38px;
-    }
+    } */
     .leaders_text{
         margin-bottom: 20px;
     }
@@ -163,7 +163,7 @@
     }
     .leaders_title{
         margin-bottom: 5px;
-        font-size: 35px
+        font-size: 33px
     }
     .leaders_title_leader {
         width: 50%;
@@ -227,6 +227,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        margin-bottom: 0;
     }
     .leaders_block_img {
         height: auto;
