--- a/frontend/src/components/General/General.css
+++ b/frontend/src/components/General/General.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
 }
 .general__content{
+    align-self: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,6 +15,15 @@
 .general__title{
     max-width: 586.41px;
     margin-bottom: 58px;
+}
+.general__title-text{
+    display: inline-block;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 113%;
+    color: #0E1B4F;
 }
 .general__title img{
     width: 100%;
@@ -60,7 +70,12 @@
         max-height: 700px;
     }
 }
-    
+
+@media (max-width: 1200px){
+    .general__title-text{
+        font-size: 80px;
+    }
+}
 
 @media (max-width: 1100px){
     .general__block{
@@ -93,6 +108,12 @@
     }
 }
 
+@media (max-width: 930px){
+    .general__title-text{
+        font-size: 54px;
+    }
+}
+
 @media (max-width: 820px){
     .general__block{
         padding-top: 50px;
@@ -118,6 +139,12 @@
     }
     .general__img{
         max-height: 400px;
+    }
+}
+
+@media (max-width: 640px){
+    .general__title-text{
+        font-size: 45px;
     }
 }
 
@@ -161,5 +188,8 @@
 @media (max-width: 320px){
     .general__img{
         max-height: 400px;
+    }
+    .general__title-text{
+        font-size: 32px;
     }
 }
