--- a/frontend/src/components/tasks/Tasks.css
+++ b/frontend/src/components/tasks/Tasks.css
@@ -127,16 +127,17 @@
         flex-direction: row;
         justify-content: center; 
     }
+    .tasks__content-container{
+        width: 100%;
+    }
     .tasks__text {
         font-weight: 700;
         font-size: 45px;
         line-height: 108%;
     }
     .tasks_content_under {
-        width: auto;
-    }
-    .tasks_content-img{
-        max-width: 181px;
+        width: 100%;
+        justify-content: space-around;
     }
     .tasks_text_block {
         min-width: 208px;
@@ -161,16 +162,12 @@
         line-height: 108%;
         margin-bottom: 45px;
     }
-    .tasks_content_under {
-        width: auto;
-    }
-    .tasks_content-img{
-        max-width: 181px;
-    }
     .tasks_text_block {
         min-width: 208px;
         margin-bottom: 35px;
-        
+    }
+    .tasks_content_icon{
+        display: none;
     }
     .tasks_content_icon{
         height: 50%;
@@ -205,15 +202,9 @@
         font-size: 15px;
         margin-bottom: 5px;
     }
-    .tasks_content-img{
-        display: none;
-    }
     .tasks_text_block {
         min-width: 210px;
         margin-bottom: 35px;  
-    }
-    .tasks_content_icon{
-        display: none;
     }
     .tasks_under_text {
         width: 100%;
@@ -258,13 +249,6 @@
     .tasks_text_title {
         font-size: 31px;
     }
-    /* .tasks_text_text {
-        font-size: 14px;
-    } */
-    .tasks_content_icon{
-        height: 50%;
-        width: 100px;
-    }
     .tasks__img {
         max-height: 470px;
     }
@@ -298,9 +282,6 @@
     .tasks_text_text {
         font-size: 12px;
     }
-    .tasks_content_icon{
-        width: 80px;
-    }
     .tasks__img {
         max-height: 470px;
     }
@@ -326,10 +307,6 @@
     .tasks_text_text {
         font-size: 12px;
     }
-    .tasks_content_icon{
-        height: 50%;
-        width: 80px;
-    }
     .tasks__img {
         max-height: 370px;
     }
@@ -346,12 +323,6 @@
     }
     .tasks_text_title {
         font-size: 22px;
-    }
-    /* .tasks_text_text {
-        font-size: 12px;
-    } */
-    .tasks_content_icon{
-        width: 75px;
     }
     .tasks__img {
         max-height: 300px;
@@ -376,9 +347,6 @@
     .tasks_text_block {
         margin-bottom: 15px;  
     }
-    .tasks_content_icon{
-        width: 55px;
-    }
     .tasks__img {
         max-height: 250px;
     }
@@ -395,9 +363,6 @@
     }
     .tasks_text_block {
         margin-bottom: 0;  
-    }
-    .tasks_content_icon{
-        width: 45px;
     }
     .tasks__img {
         max-height: 200px;
