--- a/frontend/src/components/advantage/Advantage.css
+++ b/frontend/src/components/advantage/Advantage.css
@@ -7,10 +7,14 @@
     justify-content: center;
 }
 .advantage__items{
-    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 .advantage__item{
-    
+    margin: 85px 0;
+    max-width: 460px;
+    display: flex;
 }
 .advantage__item-logo{
     margin-right: 32px;
