--- a/frontend/src/components/General/General.css
+++ b/frontend/src/components/General/General.css
@@ -18,7 +18,7 @@
 }
 .general__title-text{
     display: inline-block;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat'!important;
     font-style: normal;
     font-weight: 700;
     font-size: 96px;
