--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,11 @@ body{
   background: #F3F8FF!important;
 }
 
+#root{
+  min-height: 100vh;
+  height: 100%;
+}
+
 .title{
   font-weight: 700;
   font-size: 48px;
